[tool.poetry]
name = "image-processing-py"
version = "0.1.0"
description = ""
authors = ["Vladimir Sukhov <vdsukhov@ya.ru>"]
readme = "README.md"
packages = [{include = "image_processing_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pyvips = "^2.2.1"
numpy = "^1.22.1"
ome-types = ">=0.5"
scikit-image = ">=0.19.2"
rasterio = "^1.3.8"
geopandas = "^1.0.1"
tqdm = "^4.66.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
